added playing bar
